tests/test110.rael.exp
Error [7:9]: '^' is outside of a routine and a match statement
|         ^
|         ^
